<resources>
    <string name="step1">Step 1: Relabel</string>
    <string name="step2">Step 2: Reframe</string>
    <string name="step3">Step 3: Refocus</string>
    <string name="step4">Step 4: Revalue</string>
    <string name="step1_journal">How can you relabel your habit?</string>
    <string name="step2_journal">How is this habit harmful?</string>
    <string name="step3_journal">What positive habits can you learn or practice? How can you substitute them for your current habit?</string>
    <string name="step4_journal">How has this pattern negatively affected your life? What progress have you made?</string>
    <string name="step1_desc">Be mindful and meditate on your inner thoughts and feelings. Identify intrusive thoughts, urges and sensations without becoming engaged. Be honest with yourself.</string>
    <string name="step2_desc">Activate and strengthen the "Wise Advocate". Is this habit harmful? Remember it\'s not you, it\'s only your brain.</string>
    <string name="step3_desc">Refocus your negative energy on something positive. Think about the positive habits that can take the place of this negative one.</string>
    <string name="step4_desc">Take this time to reflect on your progress. Step back and think about how this habit has been affecting your life. Remember, it is okay to not be okay.</string>
    <string name="relabel">Relabel</string>
    <string name="reframe">Reframe</string>
    <string name="refocus">Refocus</string>
    <string name="revalue">Revalue</string>
    <string name="confirm_begin_4_steps_message">You are going to erase your previous unfinished draft. Do you want to continue ?</string>
    <string name="confirm_begin_4_steps_title">Begin 4 steps ?</string>
    <string name="begin_4_steps">Begin 4 Steps</string>
    <string name="previous_step">Previous step</string>
    <string name="next_step">Next Step</string>
    <string name="four_steps">4 Steps</string>
    <string name="resume_4_steps">Resume 4 Steps</string>
    <string name="begin_tutorial">See The Four Steps in Action</string>
    <string name="begin_step1_tutorial">Lets Begin</string>
    <string name="tutorial_introduction_title">An Example of a Bad Habit</string>
    <string name="tutorial_introduction_app_description">This app implements the four step process from the book \"You Are Not Your Brain\", written by two leading experts in neurology. The four step method is an iterative process  which enables individuals to work to minimize negative habits.</string>
    <string name="tutorial">The Four Steps In Action</string>
    <string name="tutorial_example_description"> This is Steve. Steve REALLY likes coffee. He drinks 6-10 cups every single day. If Steve does not have coffee he develops bad headaches, shakes, struggles to focus, and becomes frusturated easily. Steve is worried that his love for java might be problematic.</string>
    <string name="tutorial_example_start">Follow along as Steve uses CurbIt to complete The Four Steps for his habit. Each step will be broken down into instructions, prompts and \"Steve Says\". The \"Steve Says\" section will explain Steve\'s answer for each of the steps. </string>
    <string name="tutorial_example_title">Steve Says: </string>
    <string name="tutorial_prompt_title">Prompts: </string>
    <string name="tutorial_example_instruction">Instructions: </string>
    <string name="tutorial_next_step_button">Onward we go!</string>
    <string name="tutorial_example_step1">Here Steve thinks about his inner thoughts and feelings. Steve is honest with himself. He says: \n-I am dependent on coffee \n-I need large amounts of coffee to function correctly </string>
    <string name="tutorial_example_step2">Here Steve thinks about a Wise Advocate and pictures his best friend, Dave. What would Dave have to say about the coffee drinking? Would Dave be worried? Steve says: \n-My dependence on caffeine is not healthy \n-My body does not function well without caffeine \-Caffeine abuse is bad for my health</string>
    <string name="tutorial_example_step3">Here Steve thinks about what he can do to minimize his caffeine intake. He thinks about healthy alternatives. Steve says: \n-When I get a longing for a coffee, I can opt for a decaf tea or water \n-I can try to gradually decrease my caffeine intake</string>
    <string name="tutorial_example_step4"> Here Steve thinks about how his coffee drinking nas negatively affected his life. He also reflects on his progress. Steve says: \n-I sometimes have so much caffeine that my heart races \n-I feel like I am constantly on edge and have trouble sleeping \n\nAs Steve progresses through the four steps iteratively, he can reflect on his progress here.</string>
    <string name="tutorial_summary_title">In Summary</string>
    <string name="tutorial_summary_to_home">Home</string>
    <string name="tutorial_summary_description">Moving forward, Steve continues to use the Four Step Process. Over time, Steve is able to stop his coffee abuse. It isn\'t easy, but Steve journals his progress and uses this app to curb his habit. </string>
    <string name="tutorial_summary_body">CurbIt allows individuals to catalogue, curtail and even curb all types of negative habits. Using CurbIt, you too can stop negative habits.</string>
    <string name="survey_title">How are you feeling?</string>
    <string name="survey_prompt">On a scale of 1 to 10, how much better are you feeling about your habit after going through the 4 step process?</string>
    <string name="submit_survey">Save and Finish Process</string>
    <string name="progress_score_title">Progress Score</string>
    <string name="submit_next_survey">Submit and Go to Survey</string>
    <string name="habit_progress_header">Habit Progress</string>
    <string name="see_progress">See Progress</string>
    <string name="avg_progress_score">%1$.2f/10</string>
    <string name="alert_skip_survey_message">Are you sure you don\'t want to complete the survey?</string>
    <string name="alert_skip_survey_title">Exit survey?</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="alert_progress_may_overwrite_message">Any progress score already logged for this habit today will be overwritten.</string>
    <string name="alert_progress_may_overwrite_title">Progress Score</string>
    <string name="no_progress_logged">No progress scores logged. Complete the survey at the end of the 4 Step Process.</string>
    <string name="overall_progress_message">On average, you have been feeling: </string>
    <string name="no_progress_show">No progress to show.</string>
    <string name="survey_progress_value_text">5</string>
    <string name="level_10">Excellent</string>
    <string name="level_9">Awesome</string>
    <string name="level_8">Great</string>
    <string name="level_7">Good</string>
    <string name="level_6">Okay</string>
    <string name="level_5">Meh</string>
    <string name="level_4">Not great</string>
    <string name="level_3">Discouraged</string>
    <string name="level_2">:(</string>
    <string name="level_1">Very Sad</string>
    <string name="level_0">Terrible</string>
    <string name="progress_chart_title">Habit Progress</string>
    <string name="progress_chart_yaxis">How you felt about your Habit</string>
    <string name="progress_chart_xaxis">Date</string>
    <string name="view_progress_title">%1$s Progress</string>
    <string name="chart_score">Score</string>
    <string name="add_goal_title">Add Goal</string>
    <string name="goal_name">Name the goal</string>
    <string name="add_goal_description">Describe the goal</string>
    <string name="view_goal_description">The description of the goal</string>
    <string name="add_subgoal_title">Add Subgoal</string>
    <string name="subgoal_name">Name the subgoal</string>
    <string name="subgoal_n">Subgoal %1$d</string>
    <string name="add_subgoal_description">Add Subgoal Description</string>
    <string name="view_subgoal_description">The description of the subgoal</string>
    <string name="view_habit_description">The description of the habit</string>
    <string name="view_habit_feelings"> Habit Feels</string>
    <string name="view_habit_ranking_scale">0/10</string>
    <string name="view_habit_subtitle">Habit Dashboard</string>
    <string name="view_habit_notification_preferences">Reminder Preferences</string>
    <string name="habit_notification_title">Habit Notification Preferences</string>
    <string name="habit_notification_description">Worried you might forget about your habit? Don’t fret! CurbIt has your back! Turn on daily notifications and HabitTracker will check in to make sure you are doing well: </string>
    <string name="habit_notification_set_time">Set Notification Time</string>
    <string name="habit_notification_save">Habit Notifications</string>
    <string name="app_name">CurbIt</string>
    <string name="title_home">Home</string>
    <string name="title_information">Information</string>
    <string name="title_view_goal">Goal</string>
    <string name="title_view_subgoal">Subgoal</string>
    <string name="about_information">About The Four Steps</string>
    <string name="habit_list">Habit List</string>
    <string name="goal_list">Goal List</string>
    <string name="subgoal_list">Subgoal List</string>
    <string name="add_habit">Add Habit</string>
    <string name="add_goal">Add Goal</string>
    <string name="add_subgoal">Add Subgoal</string>
    <string name="error_add_habit">Please fill in all fields</string>
    <string name="error_add_goal">Please fill in all fields</string>
    <string name="error_add_entry">Please fill in the journal entry</string>
    <string name="name">Name the habit</string>
    <string name="description">Describe the habit</string>
    <string name="goal_description_subheading">Describe the goal</string>
    <string name="submit">Submit</string>
    <string name="submit_next">Save and move to next step</string>
    <string name="title_activity_view_habit">ViewHabit</string>
    <string name="action_settings">Settings</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="edit_subgoal">Edit Subgoal</string>
    <string name="edit_habit_name">Edit Habit Name: </string>
    <string name="edit_goal_name">Edit Goal Name: </string>
    <string name="edit_habit_description">Edit Habit Description: </string>
    <string name="edit_goal_description">Edit Goal Description: </string>
    <string name="apply_changes">Apply Changes</string>
    <string name="journal_list">Journal Entries</string>
    <string name="submit_final">Save and return to habit details</string>
    <string name="empty_journal">No journal entry yet!\n\nTo add a journal entry, go back to the previous page and begin the 4 steps.</string>
    <string name="empty_habit">Add a habit to begin !</string>
    <string name="empty_goal">Add a goal !</string>
    <string name="empty_subgoal">Add a subgoal !</string>
    <string name="delete_habit">Delete Habit</string>
    <string name="delete_goal">Delete Goal</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_popup_message">Delete "%1$s" ?</string>
    <string name="confirm_delete_popup_title">Delete Habit ?</string>
    <string name="confirm_delete_popup_title_goal">Delete Goal ?</string>
    <string name="confirm_delete_popup_title_subgoal">Delete Subgoal ?</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="confirm_save_draft_message">You are going to exit the 4 steps.\nDo you want to save your progress ?</string>
    <string name="confirm_save_draft_title">Exit 4 Steps Process ?</string>
    <string name="habit_description">Habit Description</string>
    <string name="add_subgoals">Add Subgoals</string>
</resources>